--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Assignment Solution for Module 2</title>
+</head>
+<p>Our Menu</p>
+<body>
+<p>testestestes</p>
+</body>
+</html>
