--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" href="/css/ceeses.css">
 </head>
-<p>Our Menu</p>
 <body>
-<p>testes</p>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
