--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <h1>Our Menu</h1>
 
-<section>
-<h2 id="box1" class="title1">Bakso</h2>
+<section id="sec1">
+<h2 id="title1">Bakso</h2>
 <p id="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -20,8 +20,8 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
 
-<section>
-<h2 id="box2" class="title2">Rendang</h2>
+<section id="sec2">
+<h2 id="title2">Rendang</h2>
 <p id="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -30,8 +30,8 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
 
-<section>
-<h2 id="box3" class="title3">Sate</h2>
+<section id="sec3">
+<h2 id="title3">Sate</h2>
 <p id="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
