--- a/Module 3/index.html
+++ b/Module 3/index.html
@@ -23,7 +23,7 @@
         <div class="navbar-header">       
           
           <div class="navbar-brand">
-            <a href="index.html"><h1 class="text-left">Food, LLC</h1></a>
+            <a href="index.html"><h1>Food, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -32,12 +32,27 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-
         </div>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li class="visible-xs">
+              <a href="#">Chimken</a>
+            </li>
+            <li class="visible-xs">
+              <a href="#">Beef</a>
+            </li>
+            <li class="visible-xs">
+              <a href="#">Sushi</a>
+            </li>
+          
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
       </div>
     </nav>
-
   </header>
+
+
+
   <h1 class="text-center">Our Menu</h1>
   <div class="container-fluid">
   	<div class="row">
