--- a/Module 3/index.html
+++ b/Module 3/index.html
@@ -35,13 +35,13 @@
         </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li class="visible-xs">
+            <li class="visible-xs text-center">
               <a href="#">Chimken</a>
             </li>
-            <li class="visible-xs">
+            <li class="visible-xs text-center">
               <a href="#">Beef</a>
             </li>
-            <li class="visible-xs">
+            <li class="visible-xs text-center">
               <a href="#">Sushi</a>
             </li>
           
